[gd_scene load_steps=12 format=3 uid="uid://nh0tq54d35gh"]

[ext_resource type="Script" path="res://addons/ui-anim-framework/gui/components/animations_interface.gd" id="1_fko38"]
[ext_resource type="Texture2D" uid="uid://b4jrmevk1an3d" path="res://addons/ui-anim-framework/gui/icons/add_icon_icon.png" id="2_2yxpt"]
[ext_resource type="Texture2D" uid="uid://jg2sm6ncraoe" path="res://addons/ui-anim-framework/gui/icons/delete_icon_icon.png" id="3_65bbc"]
[ext_resource type="Texture2D" uid="uid://0rqjg1weco5m" path="res://addons/ui-anim-framework/gui/icons/folder_icon.png" id="3_q3hpp"]
[ext_resource type="Texture2D" uid="uid://q400fytg18th" path="res://addons/ui-anim-framework/gui/icons/rename_icon_icon.png" id="3_ye7rx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h5ekd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sipbg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iks6r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_doqib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qg7np"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0k382"]

[node name="AnimationsInterface" type="MarginContainer"]
script = ExtResource("1_fko38")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="FilesLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Files"
vertical_alignment = 1

[node name="FileExplorerTree" type="Tree" parent="HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_h5ekd")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Seperator" type="MarginContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FileAddButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sipbg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iks6r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doqib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qg7np")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0k382")
icon = ExtResource("2_2yxpt")

[node name="FileAddFolderButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sipbg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iks6r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doqib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qg7np")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0k382")
icon = ExtResource("3_q3hpp")

[node name="FileRenameButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sipbg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iks6r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doqib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qg7np")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0k382")
icon = ExtResource("3_ye7rx")

[node name="FileDeleteButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sipbg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iks6r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doqib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qg7np")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0k382")
icon = ExtResource("3_65bbc")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="CurrentSelectedTitleLabel" type="Label" parent="HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Currently Selected Animation: "

[node name="CurrentSelectedLabel" type="Label" parent="HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.576471, 0, 1)
text = "None"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnimationTree" type="Tree" parent="HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
allow_reselect = true

[connection signal="item_selected" from="HBoxContainer/MarginContainer/VBoxContainer/FileExplorerTree" to="." method="_on_file_explorer_tree_item_selected"]
